[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/gui/LevelList.gd" type="Script" id=1]
[ext_resource path="res://res/fonts/aileron_bold.tres" type="FontFile" id=2]
[ext_resource path="res://res/sfx/ui/tv_turning_on.WAV" type="AudioStream" id=3]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="Theme" id=2]
GridContainer/constants/h_separation = 15
GridContainer/constants/v_separation = 15

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.92355
offset_right = 4.92346
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_bottom = 1.0
offset_left = 60.0
offset_right = 695.0
offset_bottom = 6.10352e-05
color = Color( 0, 0, 0, 0.462745 )

[node name="SearchTerms" type="HBoxContainer" parent="."]
offset_left = 75.0
offset_top = 15.0
offset_right = 685.0
offset_bottom = 50.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SearchType" type="OptionButton" parent="SearchTerms"]
offset_left = 3.0
offset_right = 119.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 116, 0 )
text = "Search Levels"
align = 1

[node name="Search" type="LineEdit" parent="SearchTerms"]
offset_left = 123.0
offset_right = 343.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 220, 0 )
clear_button_enabled = true
placeholder_text = "Type here..."

[node name="SearchBtn" type="Button" parent="SearchTerms"]
offset_left = 347.0
offset_right = 401.0
offset_bottom = 35.0
text = "Search"

[node name="VSeparator" type="VSeparator" parent="SearchTerms"]
offset_left = 405.0
offset_right = 435.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 30, 0 )
theme_override_styles/separator = SubResource( 1 )

[node name="Label" type="Label" parent="SearchTerms"]
offset_left = 439.0
offset_top = 10.0
offset_right = 499.0
offset_bottom = 24.0
text = "Order by:"

[node name="OrderType" type="OptionButton" parent="SearchTerms"]
offset_left = 503.0
offset_right = 607.0
offset_bottom = 35.0
custom_minimum_size = Vector2( 104, 0 )
text = "Newest"
align = 1

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_bottom = 1.0
offset_left = 80.0
offset_top = 70.0
offset_right = 680.0
offset_bottom = -56.0
custom_minimum_size = Vector2( 600, 0 )
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ScrollContainer"]
offset_right = 585.0
custom_minimum_size = Vector2( 585, 0 )
theme = SubResource( 2 )
columns = 3
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="ScrollContainer/GridContainer"]

[node name="LoadLevel" type="AudioStreamPlayer" parent="ScrollContainer/GridContainer"]
stream = ExtResource( 3 )
volume_db = -5.0

[node name="Pagination" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 80.0
offset_top = -43.9999
offset_right = 665.0
offset_bottom = -8.99994
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="Pagination"]
offset_left = 223.0
offset_right = 265.0
offset_bottom = 34.0
text = "Back"

[node name="Page" type="Label" parent="Pagination"]
offset_left = 269.0
offset_top = 10.0
offset_right = 315.0
offset_bottom = 24.0
text = "Page: 1"

[node name="Next" type="Button" parent="Pagination"]
offset_left = 319.0
offset_right = 361.0
offset_bottom = 34.0
text = "Next"

[node name="VersionLabel" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -91.0
offset_top = -26.0
offset_right = -12.0
offset_bottom = -3.0
theme_override_fonts/font = ExtResource( 2 )
text = "Alpha 2.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErrorLabel" type="Label" parent="."]
offset_left = 78.4875
offset_top = 64.0
offset_right = 250.488
offset_bottom = 101.0
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="SearchTerms/SearchType" to="ScrollContainer/GridContainer" method="_on_SearchType_item_selected"]
[connection signal="text_submitted" from="SearchTerms/Search" to="ScrollContainer/GridContainer" method="_on_Search_text_entered"]
[connection signal="item_selected" from="SearchTerms/OrderType" to="ScrollContainer/GridContainer" method="_on_OrderType_item_selected"]
[connection signal="pressed" from="Pagination/Back" to="ScrollContainer/GridContainer" method="_on_Back_pressed"]
[connection signal="pressed" from="Pagination/Next" to="ScrollContainer/GridContainer" method="_on_Next_pressed"]
